<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AdminFaculty.AdminUpdateTeacherActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/updateTeacherImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/default_profile_image"
        android:layout_marginTop="36dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/updateTeacherName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/update_teacher_name"
            android:textColor="@color/textColor"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/updateTeacherEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/update_teacher_email"
            android:textColor="@color/textColor"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/updateTeacherPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/update_teacher_post"
            android:textColor="@color/textColor"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/updateTeacher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/update_information"
            android:textColor="@color/white"
            android:background="@color/purple_700"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:textAllCaps="false"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/deleteTeacher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/delete_information"
            android:textColor="@color/white"
            android:background="#F44336"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:textAllCaps="false"
            android:layout_weight="1"/>


    </LinearLayout>



</LinearLayout>